--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <ul>
                 <li>Home</li>
                 <li>About Us</li>
-                <li onclick="openPage('product.html')">Products</li>
+                <li>Products</li>
                 <li>Contact</li>
             </ul>
         </div>
@@ -90,24 +90,24 @@
         </div>
         <div class="prod-img">
             <div class="img-box">
-                <img src="images/Green chillies.jpg">
-                <h2>Green chillies</h2>
+                <img  onclick="openPage('atmos.html')" src="images/card1.jpeg">
+                <h2>Atmos</h2>
             </div>
             <div class="img-box">
-                <img src="images/Ginger.jpg">
-                <h2>Ginger</h2>
+                <img  onclick="openPage('waterway.html')" src="images/waterway.jpeg">
+                <h2>Waterway</h2>
             </div>
             <div class="img-box">
-                <img src="images/Granites.jpg">
-                <h2>Granites</h2>
+                <img  onclick="openPage('pristine.html')" src="images/pristine.webp">
+                <h2>Pristine</h2>
             </div>
             <div class="img-box">
-                <img src="images/Apple.jpg">
-                <h2>Apple</h2>
+                <img  onclick="openPage('fontus.html')" src="images/fontus.webp">
+                <h2>Fontus</h2>
             </div>
             <div class="img-box">
-                <img src="images/Turmeric.jpg">
-                <h2>Turmeric</h2>
+                <img  onclick="openPage('Enclave.html')" src="images/enclave.webp">
+                <h2>Enclave</h2>
             </div>
         </div>
     </div>
