--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                     and
                     easy accessibility to key places around GST Road, OMR and Medavakkam.”
                 </p>
-                <img src="images/bala.jpg" alt="">
+                <img src="images/bala.jpg">
                 <h5>BALA SUBRAMANIAN</h5>
             </div>
 
@@ -254,11 +254,6 @@
 <script>
     AOS.init();
 </script>
-<!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-<script>
-    $(document).ready(function () {
-        load();
-    }); -->
 </script>
 <script>
     var indexValue = 1;
@@ -351,7 +346,7 @@
     }
 
     function next(id) {
-         localStorage.setItem("id", JSON.stringify(id));
+        localStorage.setItem("id", JSON.stringify(id));
         document.location.href = "projects.html";
     }
     function about() {
