--- a/index.html
+++ b/index.html
@@ -47,13 +47,13 @@
         </div>
     </div>
     <div id="small-menu">
-        <i onclick="hidelist()" class="fal fa-times close"></i>
+        <!-- <i onclick="hidelist()" class="fal fa-times close"></i> -->
         <i onclick="hidelist()" class="fal fa-times close-in"></i>
         <ul>
             <li>Home</li>
-            <li>About Us</li>
-            <li>Projects</li>
-            <li>Contact</li>
+            <li onclick="about()">About Us</li>
+            <li><a href="#Projects">Projects</a></li>
+            <li onclick="contact()">Contact</li>
         </ul>
     </div>
     <div id="banner">
@@ -204,7 +204,7 @@
     <div class="ask-div">
         <div class="ask-head">
             <h1>Ready to get started?
-                Join the Stone & Acres community.</h1>
+                Join the PnB Realty community.</h1>
         </div>
         <div class="ask-email">
             <button>Send an Enquiry</button>
@@ -245,6 +245,7 @@
             </div>
         </div>
         <div class="footer-btm" id="footer-btm">
+            <button>Website Design by bd code_</button>
             <p>© 2020 PnB Realty Property Developers LLP. All Rights Reserved.</p>
         </div>
     </div>
